fixing tests and sonar warnings